# xpbd-softbody-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
res/shaders/: default.vsh  ground.fsh
scenes/: clothScene.yaml  cubesScene.yaml  sphereScene.yaml  test_scene.yaml  test_scene_1.yaml  test_scene_2.yaml  test_scene_3.yaml
src/: Camera.cpp  Camera.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  ResourceConfig.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Timer.cpp  Timer.hpp  Transform.cpp  logger.hpp  main.cpp
